--- a/src/content/components/account/index.scss
+++ b/src/content/components/account/index.scss
@@ -2,6 +2,7 @@ $top-width: 488px;
 .account {
 	color: var(--color-text-default);
 	width: 100%;
+	height: 100%;
 	button {
 		height: 48px;
 		font-size: var(--font-size-300);
