--- a/src/content/components/options/index.scss
+++ b/src/content/components/options/index.scss
@@ -1,6 +1,7 @@
 .options {
 	display: flex;
-	flex-grow: 1;
+	width: 100%;
+	height: 100%;
 	.content-wrapper {
 		flex-grow: 1;
 		height: 100%;
